Variant: Rename get(index) to get_child(index).

* glib/src/variant.[hg|ccg]: Rename all get() methods that return children
to get_child() to make the API clearer and to avoid ambiguity with get()
methods that return the underlying type instead.
* examples/dbus/peer.cc:
* examples/dbus/userbus.cc:
* tests/glibmm_variant/main.cc: Adapted.
https://bugzilla.gnome.org/show_bug.cgi?id=644207#c7
(Yannick Guesnet)